[package]
name = "generals"
version = "0.1.0"
authors = ["Alex Angelini <alex.louis.angelini@gmail.com>"]

[dependencies]
clippy = "*"
env_logger = "0.3"
hlua = "0.1"
log = "0.3"
nalgebra = "0.8.2"
ncollide = "0.9.0"
piston_window = "0.50.0"
regex = "0.1"
time = "0.1"
uuid = { version = "0.2", features = ["v4"] }
